--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   Copyright (c) 2019 . Wilberforce Uwadiegwu. All Rights Reserved.
   -->
 
@@ -6,5 +7,5 @@
     <color name="colorPrimary">#070E21</color>
     <color name="colorPrimaryDark">#03060F</color>
     <color name="colorAccent">#FF4060</color>
-    <color name="colorBackground">@android:color/white</color>
+    <color name="colorBackground">@color/colorPrimary</color>
 </resources>
