--- a/app/src/main/res/drawable/background_splash.xml
+++ b/app/src/main/res/drawable/background_splash.xml
@@ -3,7 +3,7 @@
   -->
 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/splashBg" />
+    <item android:drawable="@color/darkPrimary" />
     <item
         android:drawable="@drawable/ic_launcher"
         android:gravity="center"
