--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -12,22 +12,43 @@
     tools:context=".onBoarding.OnBoardingActivity"
     tools:showPaths="true">
 
-    <com.rd.PageIndicatorView
-        android:id="@+id/pageIndicatorView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <View
+        android:id="@+id/leftCircle"
+        android:layout_width="8dp"
+        android:layout_height="8dp"
+        android:layout_marginLeft="@dimen/margin_medium"
+        android:layout_marginRight="@dimen/margin_medium"
+        android:background="@drawable/grey_circle"
+        app:layout_constraintRight_toLeftOf="@+id/centerCircle"
+        app:layout_constraintTop_toTopOf="@+id/centerCircle" />
+
+    <View
+        android:id="@+id/centerCircle"
+        android:layout_width="8dp"
+        android:layout_height="8dp"
         android:layout_marginTop="@dimen/margin_xx_large"
+        android:background="@drawable/grey_circle"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:piv_animationType="thinWorm"
-        app:piv_count="3"
-        app:piv_interactiveAnimation="true"
-        app:piv_padding="10dp"
-        app:piv_radius="4dp"
-        app:piv_selectedColor="@color/colorAccent"
-        app:piv_unselectedColor="@color/lightBlue"
-        app:piv_viewPager="@id/viewPager" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/rightCircle"
+        android:layout_width="8dp"
+        android:layout_height="8dp"
+        android:layout_marginLeft="@dimen/margin_medium"
+        android:layout_marginRight="@dimen/margin_medium"
+        android:background="@drawable/grey_circle"
+        app:layout_constraintLeft_toRightOf="@+id/centerCircle"
+        app:layout_constraintTop_toTopOf="@+id/centerCircle" />
+
+    <View
+        android:id="@+id/activeCircle"
+        android:layout_width="8dp"
+        android:layout_height="8dp"
+        android:background="@drawable/accent_circle"
+        app:layout_constraintTop_toTopOf="@+id/leftCircle"
+        app:layout_constraintLeft_toLeftOf="@+id/leftCircle"/>
 
     <Button
         android:id="@+id/skipButton"
@@ -48,7 +69,7 @@
         app:layout_constraintBottom_toTopOf="@+id/gotIt"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pageIndicatorView" />
+        app:layout_constraintTop_toBottomOf="@+id/centerCircle" />
 
 
     <Button
