--- a/app/src/main/res/xml/on_boarding_scene.xml
+++ b/app/src/main/res/xml/on_boarding_scene.xml
@@ -31,7 +31,9 @@
                 android:alpha="1"
                 app:framePosition="100"
                 app:motionTarget="@+id/gotIt" />
+        </KeyFrameSet>
 
+        <KeyFrameSet>
             <KeyAttribute
                 android:alpha="1"
                 app:framePosition="60"
@@ -60,6 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_xx_large"
             android:alpha="0"
+            android:translationZ="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
@@ -70,6 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_xx_large"
             android:alpha="1"
+            android:translationZ="1dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
@@ -97,6 +101,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_xx_large"
             android:alpha="1"
+            android:translationZ="1dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
@@ -107,6 +112,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_xx_large"
             android:alpha="0"
+            android:translationZ="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
