--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="colorBackground">@android:color/white</color>
     <color name="darkPrimary">#070E21</color>
     <color name="lightBlue">#78849E</color>
+    <color name="selectedNavColor">@color/colorAccent</color>
+    <color name="unSelectedNavColor">@color/darkPrimary</color>
 </resources>
