--- a/app/src/main/res/drawable/nav_item_background.xml
+++ b/app/src/main/res/drawable/nav_item_background.xml
@@ -4,8 +4,6 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
-    <solid android:color="@android:color/white" />
-    <corners android:radius="11dp" />
-
+    <corners android:radius="10dp" />
+    <solid android:color="@color/colorNavItemBg" />
 </shape>
