--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -28,13 +28,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
-        android:padding="@dimen/padding_large"
         android:contentDescription="@string/navigation_icon"
+        android:padding="@dimen/padding_large"
         app:layout_constraintBottom_toBottomOf="@id/explore"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintLeft_toRightOf="@+id/explore"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/explore"
         app:srcCompat="@drawable/ic_nav" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/randomSongs"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/explore" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
