--- a/app/src/main/res/layout/item_explore.xml
+++ b/app/src/main/res/layout/item_explore.xml
@@ -12,7 +12,7 @@
 
         <variable
             name="song"
-            type="com.jadebyte.jadeplayer.main.common.song.Song" />
+            type="com.jadebyte.jadeplayer.main.songs.Song" />
 
     </data>
 
