--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -14,5 +14,5 @@
     <color name="unSelectedNavColor">#CBC9C9</color>
     <color name="colorNavItemBg">#303030</color>
     <color name="colorNavItemBgSelected">@color/colorAccent</color>
-    <color name="colorBurOverlay">#070E21</color>
+    <color name="colorBurOverlay">#DA070E21</color>
 </resources>
