--- a/app/src/main/res/layout/item_explore.xml
+++ b/app/src/main/res/layout/item_explore.xml
@@ -7,73 +7,57 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
-        <import type="android.text.format.DateUtils" />
-
         <variable
-            name="song"
-            type="com.jadebyte.jadeplayer.main.songs.Song" />
-
+            name="album"
+            type="com.jadebyte.jadeplayer.main.albums.Album" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:padding="@dimen/margin_small"
-        android:background="?attr/selectableItemBackground">
+        android:background="?attr/selectableItemBackground"
+        android:padding="@dimen/padding_medium">
 
         <ImageView
-            android:id="@+id/songArt"
-            android:layout_width="150dp"
-            android:layout_height="170dp"
+            android:id="@+id/albumArt"
+            android:layout_width="140dp"
+            android:layout_height="160dp"
+            android:contentDescription="@string/track_album_art"
             android:scaleType="centerCrop"
-            android:src="@{song}"
+            android:src="@{album}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/thumb_default" />
 
         <TextView
-            android:id="@+id/songAlbum"
+            android:id="@+id/albumName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_small"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="@{song.album}"
+            android:text="@{album.name}"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="@dimen/text_size_x_small"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/songDuration"
-            app:layout_constraintTop_toBottomOf="@+id/songArt"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/albumArt"
             tools:text="Midnight Dogs" />
 
         <TextView
-            android:id="@+id/songDuration"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:text="@{DateUtils.formatElapsedTime(song.duration)}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintBottom_toBottomOf="@+id/songAlbum"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/songAlbum"
-            tools:text="04:57" />
-
-        <TextView
-            android:id="@+id/songTitle"
+            android:id="@+id/albumArtist"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_x_small"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="@{song.title}"
+            android:text="@{album.artist}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/songAlbum"
+            app:layout_constraintTop_toBottomOf="@+id/albumName"
             tools:text="Loved it out there" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
