--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -38,11 +38,37 @@
         app:srcCompat="@drawable/ic_nav" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/randomSongsRV"
+        android:id="@+id/randomAlbumsRV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/explore" />
+
+    <TextView
+        android:id="@+id/recentlyPlayed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_large"
+        android:padding="@dimen/margin_large"
+        android:text="@string/recentlyPlayed"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/randomAlbumsRV"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+
+    <TextView
+        android:id="@+id/emptyPlaylist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recentlyPlayed"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:padding="@dimen/padding_xx_large"
+       android:text="@string/empty_playlist"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
