Completed UI of SongsFragment

--- a/app/src/main/res/layout/fragment_songs.xml
+++ b/app/src/main/res/layout/fragment_songs.xml
@@ -13,7 +13,7 @@
         android:id="@+id/songs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_small"
+        android:layout_marginTop="8dp"
         android:padding="@dimen/margin_large"
         android:text="@string/songs"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
@@ -57,13 +57,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/play"
-        android:minHeight="@null"
         android:drawablePadding="@dimen/padding_large"
-        android:paddingLeft="@dimen/padding_x_large"
-        android:paddingRight="@dimen/padding_x_large"
+        android:paddingLeft="@dimen/padding_xx_large"
+        android:paddingRight="@dimen/padding_xx_large"
+        android:minHeight="0dp"
+        android:paddingTop="@dimen/padding_medium"
+        android:paddingBottom="@dimen/padding_medium"
+        android:layout_marginRight="@dimen/margin_medium"
+        android:layout_marginLeft="@dimen/margin_medium"
         style="@style/Widget.AppCompat.Button.Colored"
         android:textSize="@dimen/text_size_x_small"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:background="@drawable/accent_round_corner"
+        android:textColor="@android:color/white"
         android:drawableStart="@drawable/ic_play_white"
         app:layout_constraintBottom_toBottomOf="@+id/tracks"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -75,6 +80,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:paddingTop="@dimen/padding_small"
+        android:id="@+id/songsRV"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tracks"
