--- a/app/src/main/res/drawable/accent_round_corner.xml
+++ b/app/src/main/res/drawable/accent_round_corner.xml
@@ -1,10 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   Copyright (c) 2019 . Wilberforce Uwadiegwu. All Rights Reserved.
   -->
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners android:radius="10dp" />
-    <solid android:color="@color/colorAccent"/>
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="7dp" />
+            <stroke android:width="2dp" android:color="?colorControlHighlight" />
+            <solid android:color="@color/colorAccent" />
+        </shape>
+    </item>
+    <item android:state_focused="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="7dp" />
+            <stroke android:width="2dp" android:color="?colorControlHighlight" />
+            <solid android:color="@color/colorAccent" />
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="rectangle">
+            <corners android:radius="7dp" />
+            <solid android:color="@color/colorAccent" />
+        </shape>
+    </item>
+</selector>
