--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -24,10 +24,10 @@
         tools:layout="@layout/fragment_songs" >
         <action
             android:id="@+id/action_songsFragment_to_navigationDialogFragment"
-            app:destination="@id/navigationDialogFragment" />
-        <argument
-            android:name="origin"
-            android:defaultValue="1" />
+            app:destination="@id/navigationDialogFragment" >
+            <argument android:defaultValue="0"
+                android:name="origin" />
+        </action>
     </fragment>
     <fragment
         android:id="@+id/albumsFragment"
@@ -51,6 +51,7 @@
         tools:layout="@layout/fragment_navigation_dialog">
         <argument
             android:name="origin"
-            app:argType="integer" />
+            app:argType="integer"
+            android:defaultValue="-1" />
     </dialog-fragment>
 </navigation>
