--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -16,6 +16,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="90dp"
+        android:id="@+id/container"
         android:background="?attr/selectableItemBackground"
         android:padding="@dimen/padding_large">
 
