--- a/app/src/main/res/layout/fragment_base_player.xml
+++ b/app/src/main/res/layout/fragment_base_player.xml
@@ -83,7 +83,7 @@
         android:id="@+id/dataRV"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dataNum"
+        app:layout_constraintTop_toBottomOf="@+id/play"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
